lab1/Test/L1-A-10-56.output
Error Type B at Line 20
Error Type A at Line 30
Error Type A at Line 38
